test_suite/ui/multiple_bits.stderr
error: Flags must have exactly one set bit
 --> $DIR/multiple_bits.rs:4:20
  |
4 |     MultipleBits = 6,
  |                    ^
