test_suite/ui/multiple_bits.rs
#[derive(Copy, Clone, enumflags2::BitFlags)]
enum Foo {
    SingleBit = 1,
    MultipleBits = 6,
}

fn main() {}
